--- a/main.css
+++ b/main.css
@@ -19,7 +19,6 @@
 }
 .lead{
     display: inline-block;
-    width: 90vw;
 }
 .cima{
     position: relative;
@@ -32,10 +31,17 @@
     box-shadow: 0 5px 5px rgba(0,0,0,0.25);/*sombra baixo*/
 }
 .jheader{
+    color: white;
     height: 91.6vh;
     width: 100vw;
-    padding: 20vh 10vw;
-    background:url(jheader.jpg) cover;
+    padding: 20vh;
+    background:url(jheader.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.jheader hr{
+    background-color: white;
+    color: white;
 }
     .jheader h1,p{
     padding: 1% auto;
@@ -47,7 +53,7 @@
     .jresdiv{
     width: 80vw;
     margin-top: 3vh;
-    padding-top: 2vh;
+    padding: 2vh 0;
 }
     .jfoto{
     display: block;
