--- a/main.css
+++ b/main.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=BioRhyme|Bungee|Monoton');
+
+h1,.navbar-brand{
+    font-family: 'Monoton', cursive !important;}
+body{
+    font-family: 'bungee', cursive;
+}
+p{
+    font-family: 'BioRhyme', serif !important;
+}
 ::-webkit-scrollbar{
     display: none;
 }
@@ -71,6 +81,7 @@
 }
 
 .jcertificados{
+    color: white;
     padding: 6vh 0;
     background-color: gray;
 }
