--- a/main.css
+++ b/main.css
@@ -11,24 +11,21 @@ p{
 ::-webkit-scrollbar{
     display: none;
 }
-.bg-dark{
-     /* grandiente */	
-     background: linear-gradient(90deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-     background-size: 400% 100%;
-     animation: Gradient 15s ease infinite;
-}
 .navbar-toggler{
     border-color: rgba(0,0,0,1);
     border: none;
  }
+ .gradiente{
+    background: linear-gradient(90deg, #EE7752, #E73C7E, #23A6D5, #23D5AB) !important;
+	background-size: 400% 100% !important;
+    animation: Gradient 15s ease infinite !important;
+ }
  .btn-primary{
-    background: linear-gradient(90deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-	background-size: 400% 100%;
-    animation: Gradient 15s ease infinite;
     border: none;
 }
 .lead{
     display: inline-block;
+    width: 90% ;
 }
 .cima{
     position: relative;
@@ -64,7 +61,7 @@ p{
     display: inline;
     }
 .jresumo{
-    padding: 6vh 0;
+    padding: 4vh 0 3vh 0;
 }
     .jresdiv{
     width: 80vw;
@@ -73,7 +70,7 @@ p{
 }
     .jfoto{
     display: block;
-    margin-top: -2vh;
+    margin-top: -5vh;
     margin-bottom: 3vh;
     margin-left: auto;
     margin-right: auto;
@@ -86,7 +83,7 @@ p{
     background-color: gray;
 }
 .jcert img{
-    margin-top: 5vh;
+    margin-top: 2vh;
     height: 150px; 
 }
 
