--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ h1 {
 
 body {
     font-family: 'bungee', cursive;
-    background-color: black;
 }
 
 .bio {
@@ -229,6 +228,7 @@ input, textarea{
 .jfooter{
     background: black;
     padding: 3vh 0;
+    margin-bottom: -1.5vh;
 }
 .jnome{
     animation: cor 15s ease infinite;
@@ -244,7 +244,9 @@ input, textarea{
     width: 95%;
 }
 }
-
+.jft, .jftt{
+padding-top: 3vh;
+}
 /* XS*/
 
 @media(min-width:576px) {
