--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,17 @@
 h1, .navbar-brand {
     font-family: 'Monoton', cursive !important;
 }
+:root{
+    --cor1: #011621;
+    --cor2: #040723;
+    --cor3: #332500;
+    --cor4: #331C00;
+    /* rgba ,21 */
+    --icor1: #01162136;
+    --icor2: #04072336;
+    --icor3: #33250036;
+    --icor4: #331C0036;
+}
 .monoton{
     font-family: 'Monoton',cursive;
 }
@@ -60,10 +71,10 @@ p {
 }
 
 .gradiente {
-    background: -webkit-gradient(linear, left top, right top, from(rgb(113, 238, 82)), color-stop(rgb(60, 231, 160)), color-stop(#23A6D5), to(#23D5AB)) !important;
-    background: -webkit-linear-gradient(left, rgb(113, 238, 82), rgb(60, 231, 160), #23A6D5, #23D5AB) !important;
-    background: -o-linear-gradient(left, rgb(113, 238, 82), rgb(60, 231, 160), #23A6D5, #23D5AB) !important;
-    background: linear-gradient(90deg, rgb(113, 238, 82), rgb(60, 231, 160), #23A6D5, #23D5AB) !important;
+    background: -webkit-gradient(linear, left top, right top, from(var(--cor1)), color-stop(var(--cor2)), color-stop(var(--cor3)), to(var(--cor4))) !important;
+    background: -webkit-linear-gradient(left, var(--cor1), var(--cor2), var(--cor3), var(--cor4)) !important;
+    background: -o-linear-gradient(left, var(--cor1), var(--cor2), var(--cor3), var(--cor4)) !important;
+    background: linear-gradient(90deg, var(--cor1), var(--cor2), var(--cor3), var(--cor4)) !important;
     background-size: 400% 100% !important;
     -webkit-animation: Gradient 60s ease infinite !important;
             animation: Gradient 60s ease infinite !important;
@@ -112,10 +123,10 @@ p {
     width: 100vw;
     height: 100%;
     padding: 20vh 5vw;
-    background: -webkit-gradient(linear, left top, right top, from(rgba(113, 238, 82,.21)), color-stop(rgba(60, 231, 160,.21)), color-stop(rgba(35, 166, 213, .21)), to(rgba(35, 213, 171, .21)));
-    background: -webkit-linear-gradient(left, rgba(113, 238, 82,.21), rgba(60, 231, 160,.21), rgba(35, 166, 213, .21), rgba(35, 213, 171, .21));
-    background: -o-linear-gradient(left, rgba(113, 238, 82,.21), rgba(60, 231, 160,.21), rgba(35, 166, 213, .21), rgba(35, 213, 171, .21));
-    background: linear-gradient(90deg, rgba(113, 238, 82,.21), rgba(60, 231, 160,.21), rgba(35, 166, 213, .21), rgba(35, 213, 171, .21));
+    background: -webkit-gradient(linear, left top, right top, from(var(--icor1)), color-stop(var(--icor2)), color-stop(var(--icor3)), to(var(--icor4)));
+    background: -webkit-linear-gradient(left, var(--icor1), var(--icor2), var(--icor3), var(--icor4));
+    background: -o-linear-gradient(left, var(--icor1), var(--icor2), var(--icor3), var(--icor4));
+    background: linear-gradient(90deg, var(--icor1), var(--icor2), var(--icor3), var(--icor4));
     background-size: 400% 100%;
     -webkit-animation: Gradient 60s ease infinite;
             animation: Gradient 60s ease infinite;
@@ -272,7 +283,7 @@ button:focus {
     color: black;
     text-decoration: none;
 }
-.modal img{;
+.modal img{
     width: 25px;
     height: 25px;
     margin: 0 3% 0 5%!important;
@@ -351,45 +362,45 @@ button:focus {
         color: rgba(113, 238, 82);
     }
     16.5% {
-        color: rgb(60, 231, 160);
+        color: var(--cor2);
     }
     33% {
-        color: #23A6D5;
+        color: var(--cor3);
     }
     39.5% {
-        color: #23D5AB;
+        color: var(--cor4);
     }
     66% {
-        color: #23A6D5;
+        color: var(--cor3);
     }
     82.5% {
-        color: rgb(60, 231, 160);
+        color: var(--cor2);
     }
     100% {
-        color: rgb(113, 238, 82);
+        color: var(--cor1);
     }
 }
 
 @keyframes cor {
     0% {
-        color: rgb(113, 238, 82);
+        color: var(--cor1);
     }
     16.5% {
-        color: rgb(60, 231, 160);
+        color: var(--cor2);
     }
     33% {
-        color: #23A6D5;
+        color: var(--cor3);
     }
     39.5% {
-        color: #23D5AB;
+        color: var(--cor4);
     }
     66% {
-        color: #23A6D5;
+        color: var(--cor3);
     }
     82.5% {
-        color: rgb(60, 231, 160);
+        color: var(--cor2);
     }
     100% {
-        color: rgb(113, 238, 82);
+        color: var(--cor1);
     }
 }
