index color change

--- a/css/main.css
+++ b/css/main.css
@@ -292,6 +292,9 @@ button:focus {
     text-decoration: none;
     color: white;
 }
+.listra {
+    
+}
 @media(max-width:576px) {
     h1 {
         font-size: 1.5rem !important;
