--- a/PROJETOS/MATAMOSCA/main.css
+++ b/PROJETOS/MATAMOSCA/main.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'mobileFont';
+    src: url(./font/MobileFont.ttf);
+  }
 ::-webkit-scrollbar{
     display: none;
 }
@@ -8,6 +12,9 @@ body {
     height: 100vh;
 }
 /* APP.HTML */
+#app {
+    cursor: url(./imagens/cursor.png), auto !important;
+}
 .mosquito1 {
     width: 50px;
     height: 50px;
@@ -26,6 +33,7 @@ transform: scaleX(1);
 .side-r{
 transform: scaleX(-1);
 }
+/* Index Html*/
 .painel{
     display: flex;
     position: absolute;
@@ -37,7 +45,14 @@ transform: scaleX(-1);
     vertical-align: center;
 }
 .vidas{
+    font-family: 'mobileFont';
     margin: auto;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.vidas p {
+    margin-top: 0;
+     margin-bottom: 0;
 }
 /* GAMEOVER.HTML*/
 .gameover{
