--- a/PROJETOS/DPREVANGE/main.css
+++ b/PROJETOS/DPREVANGE/main.css
@@ -8,6 +8,7 @@
 body {
     background: url(./imagens/bg.jpg) no-repeat;
     background-size: cover;
+    background-position: center;
     width: 100vw;
     height: 100vh;
 }
@@ -28,13 +29,19 @@ body {
     height: 90px;
 }
 .side-l{
-transform: scaleX(1);
+-webkit-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+        transform: scaleX(1);
 }
 .side-r{
-transform: scaleX(-1);
+-webkit-transform: scaleX(-1);
+    -ms-transform: scaleX(-1);
+        transform: scaleX(-1);
 }
 /* Index Html*/
 .painel{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: absolute;
     width: 100vw;
@@ -56,9 +63,16 @@ transform: scaleX(-1);
 }
 /* GAMEOVER.HTML*/
 .gameover{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100vw;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding-top: 7vh;
 }
