--- a/PROJETOS/DPREVANGE/main.css
+++ b/PROJETOS/DPREVANGE/main.css
@@ -66,6 +66,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    padding-bottom: 7vh;
     width: 100vw;
     -webkit-box-align: center;
         -ms-flex-align: center;
