--- a/PROJETOS/DPREVANGE/main.css
+++ b/PROJETOS/DPREVANGE/main.css
@@ -13,7 +13,7 @@ body {
     height: 100vh;
     display: block;
 }
-/* APP.HTML */
+
 #app {
     cursor: url(./imagens/cursor.png), auto !important;
 }
@@ -39,7 +39,9 @@ body {
     -ms-transform: scaleX(-1);
         transform: scaleX(-1);
 }
-/* Index Html*/
+#inicio img, #gameover img{
+    max-height: 70vh;
+}
 .painel{
     display: -webkit-box;
     display: -ms-flexbox;
@@ -62,7 +64,7 @@ body {
     margin-top: 0;
      margin-bottom: 0;
 }
-/* GAMEOVER.HTML*/
+
 .gameover{
     display: -webkit-box;
     display: -ms-flexbox;
